# oxide

./: Cargo.toml  dev-llvm.sh  dev.sh  minor-version-bump  readme.md  toolbox.py
scripts/: debug.sh  dev.sh
src/: error.rs  lib.rs
src/draw/: colors.rs  event.rs  fonts.rs  frame.rs  mod.rs  sdl_wrappers.rs
src/draw/component/: aimbot_fov.rs  aimbot_window.rs  crit_manipulation_info.rs  crit_manipulation_window.rs  mod.rs  movement_window.rs  overlay.rs  (+6 more)
src/math/: angles.rs  mod.rs  vector.rs  vector2.rs  vector3.rs  vector4.rs  view_matrix.rs
src/netvars/: mod.rs  netvar_dumper.rs
src/oxide/: engine_prediction.rs  entity_cache.rs  interfaces.rs  log.rs  logger.rs  mod.rs  mod.rs.orig  player_db.rs  player_resource_manager.rs  util.rs
src/sdk/: attribute_manager.rs  base_client.rs  base_engine.rs  bf_read.rs  camerd_third_data.rs  client_mode.rs  client_state.rs  collideable.rs  condition.rs  convar.rs  cvar.rs  effect_data.rs  engine_trace.rs  engine_vgui.rs  entity_list.rs  event_manager.rs  fire_bullets_info.rs  font.rs  game_event.rs  game_movement.rs  game_movement.rs.orig  global_vars.rs  input.rs  mat_surface.rs  material_system.rs  mod.rs  model_info.rs  model_render.rs  net_channel.rs  networkable.rs  panel.rs  player_resource.rs  predictions.rs  predictions.rs.orig  render_view.rs  user_cmd.rs  user_message.rs  view_setup.rs  weapon.rs
src/settings/: aimbot.rs  crit_manipulation.rs  mod.rs  movement.rs  spread_reduction.rs  triggerbot.rs  visual.rs
src/util/: arcm.rs  debug.rs  handles.rs  macros.rs  mod.rs  scancode.rs  sigscanner.rs
(+112 files in other folders)
